--- a/DatabaseSearcher.App/MainWindow.xaml
+++ b/DatabaseSearcher.App/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DatabaseSearcher.App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="500">
-
+        Title="MainWindow" Height="700" Width="500"
+        Name="Window_Main" Loaded="Window_Main_Loaded">
+        
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -27,7 +28,7 @@
         </TextBlock>
 
         <Label Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">Connection String</Label>
-        <TextBox Name="Txt_ConnectionString" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6">ABC</TextBox>
+        <TextBox Name="Txt_ConnectionString" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6" LostFocus="Txt_ConnectionString_LostFocus" ></TextBox>
 
         <WrapPanel Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" VerticalAlignment="Center">
             <Button Name="Btn_Search" Height="30" Width="60" Margin="0 0 5 0">Searh</Button>
