--- a/DatabaseSearcher.App/MainWindow.xaml
+++ b/DatabaseSearcher.App/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DatabaseSearcher.App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="500"
+        Title="MainWindow" Height="750" Width="500"
         Name="Window_Main" Loaded="Window_Main_Loaded">
         
     <Grid Margin="10">
@@ -18,6 +18,7 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
+            <RowDefinition Height="4*" />
             <RowDefinition Height="6*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="0.5*" />
@@ -30,18 +31,21 @@
         <Label Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">Connection String</Label>
         <TextBox Name="Txt_ConnectionString" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6" LostFocus="Txt_ConnectionString_LostFocus" ></TextBox>
 
-        <WrapPanel Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" VerticalAlignment="Center">
-            <Button Name="Btn_Search" Height="30" Width="60" Margin="0 0 5 0">Searh</Button>
-            <Button Name="Btn_Stop" Height="30" Width="60">Stop</Button>
+        <Label Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center">Text to Search</Label>
+        <TextBox Name="Txt_SearchText" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6"></TextBox>
+        
+        <WrapPanel Grid.Column="1" Grid.Row="3" FlowDirection="RightToLeft" VerticalAlignment="Center">
+            <Button Name="Btn_Search" Height="30" Width="60" Margin="0 0 5 0" Click="Btn_Search_Click">Searh</Button>
+            <Button Name="Btn_Stop" Height="30" Width="60" IsEnabled="False">Stop</Button>
         </WrapPanel>
 
-        <TextBox Name="Txt_Result" IsReadOnly="True" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" Height="30"></TextBox>
+        <TextBox Name="Txt_Result" IsReadOnly="True" Grid.ColumnSpan="2" Grid.Row="4" Margin="0 0 0 10" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" ></TextBox>
 
-        <TextBox Name="Txt_Logs" IsReadOnly="True" Grid.ColumnSpan="2" Grid.Row="4" AcceptsReturn="True" FontFamily="Lucida Console" FontSize="11" >Here go the logs</TextBox>
+        <TextBox Name="Txt_Logs" IsReadOnly="True" Grid.ColumnSpan="2" Grid.Row="5" AcceptsReturn="True" FontFamily="Lucida Console" FontSize="11" VerticalScrollBarVisibility="Visible"></TextBox>
 
-        <ProgressBar Name="Pb_Status" Minimum="0" Maximum="100" Value="60" Grid.ColumnSpan="2" Grid.Row="5" VerticalAlignment="Center" Height="30"></ProgressBar>
-        <TextBlock Text="{Binding ElementName=Pb_Status, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="5" Foreground="White"></TextBlock>
+        <ProgressBar Name="Pb_Status" Minimum="0" Maximum="100" Value="0" Grid.ColumnSpan="2" Grid.Row="6" VerticalAlignment="Center" Height="30"></ProgressBar>
+        <TextBlock Text="{Binding ElementName=Pb_Status, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="6" Foreground="White"></TextBlock>
 
-        <TextBlock Name="Tb_Status" Grid.ColumnSpan="2" Grid.Row="6" Height="30" VerticalAlignment="Center" FontSize="10" FontStyle="Italic" Foreground="#B2000000">Status</TextBlock>
+        <TextBlock Name="Tb_Status" Grid.ColumnSpan="2" Grid.Row="7" Height="30"  FontSize="10" FontStyle="Italic" Foreground="#B2000000">ddd</TextBlock>
     </Grid>
 </Window>
