--- a/DatabaseSearcher.App/MainWindow.xaml
+++ b/DatabaseSearcher.App/MainWindow.xaml
@@ -32,11 +32,11 @@
         <TextBox Name="Txt_ConnectionString" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6" LostFocus="Txt_ConnectionString_LostFocus" ></TextBox>
 
         <Label Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center">Text to Search</Label>
-        <TextBox Name="Txt_SearchText" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6"></TextBox>
+        <TextBox Name="Txt_SearchText" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Height="30" Padding="6" TextChanged="Txt_SearchText_TextChanged"></TextBox>
         
         <WrapPanel Grid.Column="1" Grid.Row="3" FlowDirection="RightToLeft" VerticalAlignment="Center">
             <Button Name="Btn_Search" Height="30" Width="60" Margin="0 0 5 0" Click="Btn_Search_Click">Searh</Button>
-            <Button Name="Btn_Stop" Height="30" Width="60" IsEnabled="False">Stop</Button>
+            <Button Name="Btn_Stop" Height="30" Width="60" IsEnabled="False" Click="Btn_Stop_Click">Stop</Button>
         </WrapPanel>
 
         <TextBox Name="Txt_Result" IsReadOnly="True" Grid.ColumnSpan="2" Grid.Row="4" Margin="0 0 0 10" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" ></TextBox>
